crates/musli/tests/ui/transparent_error.stderr
error: A #[musli(transparent)] attribute can only be used on structs which have a single field
 --> tests/ui/transparent_error.rs:4:9
  |
4 | #[musli(transparent)]
  |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on structs which have a single field
  --> tests/ui/transparent_error.rs:11:9
   |
11 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] struct must have a single field
  --> tests/ui/transparent_error.rs:15:9
   |
15 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] struct must have a single field
  --> tests/ui/transparent_error.rs:19:9
   |
19 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:24:13
   |
24 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:29:13
   |
29 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] variant must have a single field
  --> tests/ui/transparent_error.rs:31:13
   |
31 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] variant must have a single field
  --> tests/ui/transparent_error.rs:33:13
   |
33 |     #[musli(transparent)]
   |             ^^^^^^^^^^^

error: A #[musli(transparent)] or #[musli(packed)] struct cannot have named fields
  --> tests/ui/transparent_error.rs:40:13
   |
40 |     #[musli(name = "test")]
   |             ^^^^

error: A #[musli(transparent)] or #[musli(packed)] variant cannot have named fields
  --> tests/ui/transparent_error.rs:48:21
   |
48 |     Variant(#[musli(name = "test")] String),
   |                     ^^^^

error: A #[musli(transparent)] struct cannot have an optional field
  --> tests/ui/transparent_error.rs:54:13
   |
54 |     #[musli(skip_encoding_if = String::is_empty)]
   |             ^^^^^^^^^^^^^^^^

error: A #[musli(transparent)] variant cannot have an optional field
  --> tests/ui/transparent_error.rs:62:17
   |
62 |         #[musli(skip_encoding_if = String::is_empty)]
   |                 ^^^^^^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on structs which have a single field
  --> tests/ui/transparent_error.rs:73:9
   |
73 | #[musli(transparent)]
   |         ^^^^^^^^^^^

error: A #[musli(transparent)] attribute can only be used on variants which have a single field
  --> tests/ui/transparent_error.rs:83:13
   |
83 |     #[musli(transparent)]
   |             ^^^^^^^^^^^
